<resources>
    <string name="app_name">eDairy</string>
    <string name="login">Enter details to login</string>
    <string name="phone"> Enter Email Address</string>
    <string name="password"> Password</string>
    <string name="login_btn">Login</string>
    <string name="add_farmer">Add Farmer</string>
    <string name="first_name">FirstName</string>
    <string name="lastName">LastName</string>
    <string name="id">National ID</string>
    <string name="email">Email</string>
    <string name="village">Village</string>
    <string name="confirm">Confirm Password</string>
    <string name="user_phone">Phone Number</string>
    <string name="register">Register</string>
    <string name="add_collector">Add Collector</string>
    <string name="Farmers">Farmers</string>
    <string name="Collectors">Collectors</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
