<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".Test">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="match_parent">
            <android.support.v7.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tool_bar"
                android:elevation="6dp"
                android:minHeight="?attr/actionBarSize"
                android:background="#444"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                />
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_marginTop="15dp"
                android:layout_height="80dp">
                <android.support.design.widget.TextInputEditText
                    android:layout_height="75dp"
                    android:layout_width="match_parent"
                    android:id="@+id/test_firstname"
                    android:hint="@string/first_name"
                    android:layout_marginStart="25dp"
                    android:layout_marginEnd="25dp"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="80dp">
                <android.support.design.widget.TextInputEditText
                    android:layout_height="75dp"
                    android:layout_width="match_parent"
                    android:layout_marginStart="25dp"
                    android:id="@+id/test_lastname"
                    android:hint="@string/lastName"
                    android:layout_marginEnd="25dp"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout

                android:layout_width="match_parent"
                android:layout_height="80dp">
                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="75dp"
                    android:id="@+id/test_email"
                    android:hint="@string/email"
                    android:layout_marginStart="25dp"
                    android:layout_marginEnd="25dp"
                    android:inputType="textEmailAddress"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="80dp">
                <android.support.design.widget.TextInputEditText
                    android:layout_height="75dp"
                    android:layout_width="match_parent"
                    android:layout_marginStart="25dp"
                    android:id="@+id/test_village"
                    android:hint="@string/village"
                    android:layout_marginEnd="25dp"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="80dp">
                <android.support.design.widget.TextInputEditText
                    android:layout_height="75dp"
                    android:layout_width="match_parent"
                    android:layout_marginStart="25dp"
                    android:id="@+id/test_phone"
                    android:hint="@string/user_phone"
                    android:inputType="phone"
                    android:layout_marginEnd="25dp"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="80dp">
                <android.support.design.widget.TextInputEditText
                    android:layout_height="75dp"
                    android:layout_width="match_parent"
                    android:layout_marginStart="25dp"
                    android:id="@+id/test_id"
                    android:hint="@string/id"
                    android:inputType="number"
                    android:layout_marginEnd="25dp"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="80dp">
                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:id="@+id/test_pass"
                    android:hint="@string/password"
                    android:layout_marginEnd="25dp"
                    android:layout_marginStart="25dp"
                    android:inputType="textPassword"
                    android:layout_height="75dp" />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="80dp">
                <android.support.design.widget.TextInputEditText
                    android:layout_height="75dp"
                    android:layout_width="match_parent"
                    android:id="@+id/test_confirm"
                    android:hint="@string/confirm"
                    android:inputType="textPassword"
                    android:layout_marginStart="25dp"
                    android:layout_marginEnd="25dp"/>
            </android.support.design.widget.TextInputLayout>
            <Button
                android:id="@+id/test_reg"
                android:text="Register"
                style="@style/Base.TextAppearance.AppCompat.Widget.Button.Colored"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                android:layout_marginTop="25dp"
                android:layout_width="match_parent"
                android:layout_marginBottom="25dp"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>